# SmartChessMaster_20240918_190606

./: Vision openAI guide.docx  Vision openAI guide.txt  main.py  pasted_text.txt  pyproject.toml  repo_creation_response.json
static/css/: style.css
static/js/: chess_game.js
templates/: index.html
